sending the params without encoding

--- a/sdks/java/src/main/resources/example.properties
+++ b/sdks/java/src/main/resources/example.properties
@@ -1,7 +1,11 @@
 blueprints.graph=org.apache.usergrid.drivers.blueprints.UsergridGraph
 
 usergrid.organization=test-organization
-usergrid.application=internapp
-usergrid.client_id=b3U6ruVH4hxJEeW20m4wqqvKJw
-usergrid.client_secret=b3U6gys4FgK2yVGne7oVBAzRkU1_UrU
+usergrid.application=e6dd70e8-3168-11e5-a06c-ced2abb56cdd
+usergrid.client_id=b3U65m2_3zFoEeWgbM7Sq7Vs3Q
+usergrid.client_secret=b3U6Hi0kkUa7_80MNxKZ9rKRwf6MdOc
 usergrid.apiUrl=http://localhost:8080/
+
+
+
+jersey.config.client.suppressHttpComplianceValidation = true
