--- a/sdks/java/pom.xml
+++ b/sdks/java/pom.xml
@@ -6,6 +6,7 @@
         <bundle.namespace>org.apache.usergrid</bundle.namespace>
         <org.springframework.version>3.1.2.RELEASE</org.springframework.version>
         <jackson-version>2.2.0</jackson-version>
+        <junit.version>4.11</junit.version>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
@@ -38,13 +39,15 @@
             <name>Scott Ganyo</name>
         </developer>
         <developer>
-            <id>sganyo</id>
+            <id>jwest</id>
             <name>Jeffrey West</name>
         </developer>
     </developers>
 
     <build>
+
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -68,6 +71,14 @@
     <dependencies>
         <!-- <dependency> <groupId>com.google.android</groupId> <artifactId>android</artifactId> 
         <version>2.2.1</version> <scope>provided</scope> </dependency> -->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
